--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.huge {
+	color: #62543f;
+	font-family: "Lato", "Source Sans Pro", sans-serif;
+	text-align: center;
+	letter-spacing: 0.2em;
+	font-size: 1.5rem;
+	font-weight: 300;
+	margin: 1rem auto;
+	text-transform: uppercase;
+	padding-top: 4px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.body {
+	color: #404040;
+	font-family: "Lato", "Source Sans Pro", sans-serif;
+	font-size: 16px;
+	font-size: 1rem;
+	line-height: 1.5;
+  width: 100%;
+  max-width:650px;
+  margin: 0 auto;
 }
+
+.has-medium-font-size {
+	    font-size: 16px;
+	}
